Introduccion y visualizacion party_affiliation

--- a/new/Notebook Final.ipynb
+++ b/new/Notebook Final.ipynb
@@ -1,9 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reto Grupo C\n",
+    "\n",
+    "### Integrantes\n",
+    "\n",
+    "- Álvaro Garnica Navarro\n",
+    "- Alejandro Martínez López\n",
+    "- Fernando Suárez\n",
+    "- Daniel Vera Nieto\n",
+    "- Sergio López López"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introducción\n",
+    "\n",
+    "En este notebook presentamos el resultado final que hemos obtenido y cómo lo hemos obtenido. En un primer lugar hemos realizado un exploring del dataset, analizando característica a característica. Después se ha hecho un preprocesamiento del dataset, donde se realizan técnicas de análisis de sentimientos. Y por último, se entrena el modelo consiguiendo una f-score de 0.63421 en la competición F1Macro - False Political Claim Detection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "19626a23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +78,6 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "52ca1eae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +89,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3993f626",
    "metadata": {},
    "source": [
     "# EDA"
@@ -76,7 +97,6 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "db6d4581",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +129,6 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "fcc313f5",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +151,6 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "bc576fc9",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +172,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41d0f786",
    "metadata": {},
    "source": [
     "Un dataset de tamaño pequeño, con algunos valores nulos en las columnas de speaker_job y state_info"
@@ -162,7 +179,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae77adfb",
    "metadata": {},
    "source": [
     "## Label\n",
@@ -172,7 +188,6 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "0c38d061",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +237,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c226d4c7",
    "metadata": {},
    "source": [
     "## Statement\n",
@@ -232,7 +246,6 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "42ede815",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +310,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "916bc4b8",
    "metadata": {},
    "source": [
     "## Subject\n",
@@ -307,7 +319,6 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "0609c143",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +409,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fafef48c",
    "metadata": {},
    "source": [
     "¿Cuántos documentos tienen el top n=50 topcis?"
@@ -407,7 +417,6 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "430bf739",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +441,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa09a32a",
    "metadata": {},
    "source": [
     "Con el top 50 topics cubrimos más del 90% de los documentos en nuestro dataset."
@@ -440,7 +448,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be794b3f",
    "metadata": {},
    "source": [
     "## Nota importante:\n",
@@ -449,7 +456,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4182ca9",
    "metadata": {},
    "source": [
     "## Speaker"
@@ -458,7 +464,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e8303ed0",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +526,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0586a8bd",
    "metadata": {},
    "source": [
     "Podemos ver como buena parte de las muestras son de Obama, Trum y Hillary Clinton. También como medios asociados a Internet (mail chains o blog posts) o el mismo Trump, tienen un alto porcentaje de fake news."
@@ -529,7 +533,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e4ad9fa",
    "metadata": {},
    "source": [
     "## Speaker job\n",
@@ -539,7 +542,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "55590d15",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +605,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df0e496d",
    "metadata": {},
    "source": [
     "Buena parte de las muestras son de senadores, gobernadores o presidentes. Cabe destacar el alto porcentaje de fake news de los presidentes electos, lo cual nos puede dar una pista de sesgos en nuestro datasets."
@@ -611,7 +612,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca1135a8",
    "metadata": {},
    "source": [
     "## State_info\n",
@@ -621,7 +621,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "95f7d448",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +683,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "108bd25f",
    "metadata": {},
    "source": [
     "## Party affiliation"
@@ -693,7 +691,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "70dcf824",
    "metadata": {},
    "outputs": [
     {
@@ -747,8 +744,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.groupby(['party_affiliation','label']).size().unstack('label').plot(kind='bar',figsize=(10,10))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "122f2b0f",
    "metadata": {},
    "source": [
     "Podemos destacar que la mayor parte de muestras pertenecen al partido republicano, demócrata o ``None``. Además, las muestras de los demócratas tienen una tendencia menor a ser falsas."
@@ -756,7 +761,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6913fc3f",
    "metadata": {},
    "source": [
     "\n",
@@ -774,7 +778,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bb3d072",
    "metadata": {},
    "source": [
     "# Preprocessing\n",
@@ -785,7 +788,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "690369cd",
    "metadata": {},
    "source": [
     "## Sentiment\n",
@@ -814,7 +816,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd1d5db6",
    "metadata": {},
    "source": [
     "## Preprocessing"
@@ -823,7 +824,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "28bfd984",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +833,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d74c276",
    "metadata": {},
    "source": [
     "### Topics"
@@ -842,7 +841,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7f4177ac",
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1167,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca96e235",
    "metadata": {},
    "source": [
     "Podemos ver la media de veces que aparece cada uno de los topics en el dataset, el mayor de ellos economy con un 11.1%."
@@ -1177,7 +1174,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fe326a6",
    "metadata": {},
    "source": [
     "### Speaker Job processing\n",
@@ -1187,7 +1183,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b1634e24",
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1457,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81f0950f",
    "metadata": {},
    "source": [
     "### State info\n",
@@ -1473,7 +1467,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b601f40e",
    "metadata": {},
    "outputs": [
     {
@@ -1718,7 +1711,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8db77882",
    "metadata": {},
    "source": [
     "### Party Affiliation\n",
@@ -1729,7 +1721,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f1aec80d",
    "metadata": {},
    "outputs": [
     {
@@ -1755,7 +1746,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0cc35a3d",
    "metadata": {},
    "outputs": [
     {
@@ -1993,7 +1983,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4673a11e",
    "metadata": {},
    "source": [
     "### Type conversion"
@@ -2002,7 +1991,6 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "6dbe078c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2015,7 +2003,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "68706e50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2024,7 +2011,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c738389",
    "metadata": {},
    "source": [
     "Heatmap"
@@ -2033,7 +2019,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3aa04b7c",
    "metadata": {},
    "outputs": [
     {
@@ -2057,7 +2042,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81956458",
    "metadata": {},
    "source": [
     "No hay grandes correlaciones con ninguna característica y la label. La mayor de ellas es la correlación negativa con el ser demócrata y el sentimiento (si es 0, negativo, suele tender a ser fake)."
@@ -2066,7 +2050,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "63298c31",
    "metadata": {},
    "outputs": [
     {
@@ -2097,7 +2080,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "228174cb",
    "metadata": {},
    "outputs": [
     {
@@ -2127,7 +2109,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac4064c8",
    "metadata": {},
    "source": [
     "### Preprocessing test dataset"
@@ -2136,7 +2117,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a2a8a6d2",
    "metadata": {},
    "outputs": [
     {
@@ -2406,7 +2386,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "f9133a5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2416,7 +2395,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e60731b6",
    "metadata": {},
    "source": [
     "# Modeling\n",
@@ -2426,7 +2404,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "86f50d27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2437,7 +2414,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a90aa056",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2454,7 +2430,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db17125f",
    "metadata": {},
    "source": [
     "## Experimentos con solo texto"
@@ -2463,7 +2438,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "0bf0a7d7",
    "metadata": {},
    "outputs": [
     {
@@ -2488,7 +2462,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f402169a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2498,7 +2471,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cd4ede34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2533,7 +2505,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a81f9ac8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2547,7 +2518,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f0ce494",
    "metadata": {
     "scrolled": true
    },
@@ -2735,7 +2705,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1301e64c",
    "metadata": {},
    "source": [
     "### Best Model\n",
@@ -2747,7 +2716,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "618c4754",
    "metadata": {},
    "outputs": [
     {
@@ -2860,7 +2828,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b27c7188",
    "metadata": {},
    "source": [
     "## Custom transformer"
@@ -2869,7 +2836,6 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "fcc47666",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2981,7 +2947,6 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "83670050",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2992,7 +2957,6 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "b47cb7c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3005,7 +2969,6 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "1a0f26c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3041,7 +3004,6 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "9b9bba9b",
    "metadata": {},
    "outputs": [
     {
@@ -3290,7 +3252,6 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "83f6c9dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3300,7 +3261,6 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "f5826dfe",
    "metadata": {},
    "outputs": [
     {
@@ -3359,7 +3319,6 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "5e03d391",
    "metadata": {},
    "outputs": [
     {
@@ -3389,7 +3348,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03f9f3da",
    "metadata": {},
    "source": [
     "Este model personalizado con extra features alcanza un score de 0.62369, menos que modelo sin extra features."
@@ -3398,7 +3356,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf84df50",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3406,9 +3363,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cdaw",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cdaw"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3420,7 +3377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
